Increase max perm size for ant